syntax = "proto3";

package billing;

option go_package = "github.com/batazor/shortlink/internal/services/billing/domain/events";

enum Event {
  PAYMENT_NEW = 0;
  PAYMENT_PENDING = 1;
  PAYMENT_APPROVE = 2;
  PAYMENT_CLOSE = 3;

  BALANCE_UPDATE = 10;

  ORDER_NEW = 20;
  ORDER_UPDATE = 21;
  ORDER_APPROVED = 22;
  ORDER_PAID = 23;
  ORDER_CLOSE = 24;
  ORDER_REJECT = 25;
}

message payment {
  string user_id = 1;
  string id = 2;
  string name = 3;

  enum StatusPayment {
    CREATE = 0;
    PENDING = 1;
    APPROVE = 2;
    CLOSE = 3;
    REJECT = 4;
  }
  StatusPayment status = 4;
}

message payments {
  repeated payment list = 1;
}

message balance {
  string payment_id = 1;
  int64 amount = 2;
}

message balances {
  repeated balance list = 1;
}

message tariff {
  string id = 1;
  string name = 2;
  int64 amount = 3;
}

message tariffs {
  repeated tariff list = 1;
}

message order {
  string id = 1;
  string user_id = 2;
  string tariff_id = 3;

  enum StatusOrder {
    CREATE = 0;
    PENDING = 1;
    APPROVE = 2;
    PAID = 3;
    CLOSE = 4;
    REJECT = 5;
  }
  StatusOrder status = 4;
}

message orders {
  repeated order list = 1;
}
